tests/ui/error-codes/E0438.stderr
error[E0438]: const `BAR` is not a member of trait `Bar`
  --> $DIR/E0438.rs:4:5
   |
LL |     const BAR: bool = true;
   |     ^^^^^^^^^^^^^^^^^^^^^^^ not a member of trait `Bar`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0438`.
